log/build_2023-01-06_10-42-27/colreg_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/filip/ros2_ws/install/colreg_package/lib/python3.10/site-packages/colreg_package/tcpa_dcpa.py", line 81
    self.get_logger().info("TCPA: %s",% str(self.tcpa))
                                      ^
SyntaxError: invalid syntax

